--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -374,11 +374,13 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="{{ url_for('static', filename='falcon/vendors/list.js/list.min.js') }}"></script>
     <script src="{{ url_for('static', filename='falcon/assets/js/theme.js') }}"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
     <!--    JavaScripts from old site-->
     <script src="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.2/dist/jBox.all.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/base_new.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/jb-tooltip.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/echart_base.js') }}"></script>
 <!--    <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/jb-tooltip.js') }}"></script>-->
 
 
