--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -173,7 +173,7 @@ Stock Score | Stock Info
                 </div>
                 <div class="col text-center fw-bold">{{candidate.ticker}} Stock Price</div>
             </div>
-            <div class="echart-test" style="min-height: 300px;" data-echart-responsive="true"></div>
+            <div class="echart-icker-info" style="min-height: 300px;" data-echart-responsive="true"></div>
         </div>
     </div>
 </div>
