--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -295,6 +295,31 @@ docReady(marketEmotionMobileInit);
             <button type="button" class="btn-close btn btn-sm btn-circle d-flex flex-center transition-base" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
       <div class="modal-body p-0">
+<!--        <div class="card mb-1 echart-area">-->
+<!--            <div class="echart-header d-md-inline-flex m-3">-->
+<!--                <div>-->
+<!--                    Zoom-->
+<!--                    <span class="ms-2">-->
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_1" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_1" data-function-name="today-emotion" data-period="1">1m</label>-->
+
+<!--                        <input checked type="radio" class="btn-check" name="echart_options" id="echart_option_2" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_2" data-function-name="today-emotion" data-period="3">3m</label>-->
+
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_3" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_3" data-function-name="today-emotion" data-period="6">6m</label>-->
+
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_4" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_4" data-function-name="today-emotion" data-period="12">1y</label>-->
+
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_5" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_5" data-function-name="today-emotion" data-period="-1">All</label>-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="echart-today-snp" style="min-height: 300px;" data-echart-responsive="true"></div>-->
+<!--            <div class="echart-today-emotion" style="min-height: 300px;" data-echart-responsive="true"></div>-->
+<!--        </div>-->
         <div class="p-4">
 <!--            <div class="echart-test" style="min-height: 300px;" data-echart-responsive="true"></div>-->
             <div id="container_sp500" style="width:100%; height:300px;"></div>
