similar placement done

--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -140,6 +140,7 @@ Stock Score | Stock Info
     </div>
 </div>
 
+
 <!--<div class="row">-->
 <!--    <div class="col">-->
 <!--        <div class="card mb-1">-->
@@ -178,6 +179,13 @@ Stock Score | Stock Info
     </div>
 </div>
 
+<div class="row mb-2">
+    <div class="col">
+        <div class="card mb-1">
+            Similar companies:
+        </div>
+    </div>
+</div>
 
 <div class="row ticket-info-tabs">
     <div class="col">
