--- a/app/templates/userview/trader_station.html
+++ b/app/templates/userview/trader_station.html
@@ -7,12 +7,60 @@ Stock Score | Trader Station
 {% endblock %}
 
 {% block content %}
+<input type="hidden" id="user-email" value="{{ user.email }}">
+<input type="hidden" id="user-emotion" value={{user_fgi}}>
+
 <!--title row-->
 <div class="row mb-3">
     <div class="col">
         <div class="card bg-100 shadow-none border">
-            <div class="row gx-0 p-2 flex-between-center">
-Trader Station
+            <div class="row gx-0 flex-between-center flex-fill">
+                <div class="col-sm-auto d-flex align-items-center justify-content-between">
+                    <div class="d-flex align-items-center">
+                        <i class="far fa-newspaper fa-4x p-3"></i>
+                        <div>
+                            <h5 class="fw-bold mb-0">
+                                Trader Station
+                            </h5>
+                            <p class="fs--1 mb-0 text-500">My favorites and tracking</p>
+                        </div>
+                    </div>
+                    <div class="modal-cursor chart-container pt-3 d-lg-none today_emotion_box" data-bs-toggle="modal" data-bs-target="#emotion-modal" style="right: 5%; position: relative; height:75px; width:115px">
+                        <canvas class="mt-n3" id="marketEmotion-mobile" width="90" height="90"></canvas>
+                        <p class="mb-0 text-center fs--4 mt-n5 text-{{fgi_text_color}}">{{ market_emotion.fgi_value}}</p>
+                        <p class="mb-0 text-center fs--2 text-800">Market Emotion</p>
+                        <p class="mb-0 text-center fs--2 text-400">{{ market_emotion.score_time.strftime("%d %b, %Y %H:%M:%S") }}</p>
+                    </div>
+                </div>
+                <div class="col-md-auto p-3 d-none d-lg-inline" data-bs-toggle="modal" data-bs-target="#emotion-modal">
+                    <div class="modal-cursor chart-container pt-2 today_emotion_box" style="position: relative; height:100px; width:120px;">
+                        <canvas class="mt-n3" id="marketEmotion" width="90" height="90"></canvas>
+                        <p class="mb-0 text-center fs--4 mt-n5 text-{{fgi_text_color}}">{{ market_emotion.fgi_value}}</p>
+                        <p class="mb-0 text-center fs--2 text-800">Market Emotion</p>
+                        <p class="mb-0 text-center fs--2 text-400">{{ market_emotion.score_time.strftime("%d %b, %Y %H:%M:%S") }}</p>
+                    </div>
+                </div>
+                <div class="col-md-auto w-25 p-3 d-none d-lg-inline">
+                    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+                  {
+                      "symbols": [
+                        {
+                          "proName": "FOREXCOM:SPXUSD",
+                          "title": "S&P 500"
+                        }
+                      ],
+                      "colorTheme": "light",
+                      "isTransparent": true,
+                      "showSymbolLogo": true,
+                      "locale": "en"
+                  }
+              </script>
+                </div>
+                <div class="col-md-auto p-3">
+                    <div class="mb-1 mr-1 badge bg-info d-block">EST:  {{ current_est_time }}</div>
+                    <div class="mb-1 mr-1 badge bg-info d-block">US market:  {{ trading_session_state }}</div>
+                    <div class="mb-1 mr-1 badge bg-info d-block"  data-toggle="tooltip" data-placement="bottom" title="Market Data last update">Last Upd:  {{ last_update_date }}</div>
+                </div>
             </div>
         </div>
     </div>
@@ -38,10 +86,63 @@ Candidates
 
 {% endblock %}
 {% block scripting %}
-
+<script src="https://code.highcharts.com/stock/highstock.js"></script>
+<script src="https://code.highcharts.com/stock/modules/data.js"></script>
+<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js"
+        integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg=="
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/snp_graph.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/trader_station.js') }}"></script>
 
 {% endblock %}
 
 {% block modal %}
+<div class="modal fade emotion-modal" id="emotion-modal" data-bs-keyboard="false" data-bs-backdrop="static" tabindex="-1" aria-labelledby="emotion-modal-label" aria-hidden="true">
+  <div class="modal-dialog modal-lg mt-6" role="document">
+    <div class="modal-content border-0">
+      <div class="modal-header bg-light rounded-top-lg py-3 ps-4 pe-4">
+            <h4 class="mb-1" id="emotion-modal-label">S&P with Market Emotion</h4>
+            <button type="button" class="btn-close btn btn-sm btn-circle d-flex flex-center transition-base" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+      <div class="modal-body p-0">
+<!--        <div class="card mb-1 echart-area">-->
+<!--            <div class="echart-header d-md-inline-flex m-3">-->
+<!--                <div>-->
+<!--                    Zoom-->
+<!--                    <span class="ms-2">-->
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_1" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_1" data-function-name="today-emotion" data-period="1">1m</label>-->
+
+<!--                        <input checked type="radio" class="btn-check" name="echart_options" id="echart_option_2" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_2" data-function-name="today-emotion" data-period="3">3m</label>-->
+
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_3" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_3" data-function-name="today-emotion" data-period="6">6m</label>-->
+
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_4" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_4" data-function-name="today-emotion" data-period="12">1y</label>-->
+
+<!--                        <input type="radio" class="btn-check" name="echart_options" id="echart_option_5" autocomplete="off">-->
+<!--                        <label class="btn btn-primary btn-sm echart-btn" for="echart_option_5" data-function-name="today-emotion" data-period="-1">All</label>-->
+<!--                    </span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="echart-today-snp" style="min-height: 300px;" data-echart-responsive="true"></div>-->
+<!--            <div class="echart-today-emotion" style="min-height: 300px;" data-echart-responsive="true"></div>-->
+<!--        </div>-->
+        <div class="p-4">
+<!--            <div class="echart-test" style="min-height: 300px;" data-echart-responsive="true"></div>-->
+            <div id="container_sp500" style="width:100%; height:300px;"></div>
+            <div id="container_emotion" style="width:100%; height:300px;"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" onclick="go_to_cnn()" class="btn btn-secondary" >Description</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
