--- a/app/templates/userview/trader_station.html
+++ b/app/templates/userview/trader_station.html
@@ -78,7 +78,11 @@ Stock Score | Trader Station
 <div class="row mb-2">
     <div class="col">
         <div class="card mb-1">
-Candidates
+            <div class="candidates-table">
+                Candidates
+                {% include 'layouts/loader.html' %}
+            </div>
+
         </div>
     </div>
 </div>
