--- a/app/templates/partial/user_candidates.html
+++ b/app/templates/partial/user_candidates.html
@@ -1,104 +1,104 @@
-<div class="table-responsive scrollbar">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
-        <th scope="col"> </th>
-        <th scope="col">joined</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="hover-actions-trigger">
-        <td class="align-middle text-nowrap">
-          <div class="d-flex align-items-center">
-            <div class="avatar avatar-xl">
-              <img class="rounded-circle" src="../../assets/img/team/4.jpg" alt="" />
-            </div>
-            <div class="ms-2">Ricky Antony</div>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">ricky@example.com</td>
-        <td class="w-auto">
-          <div class="btn-group btn-group hover-actions end-0 me-4">
-            <button class="btn btn-light pe-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><span class="fas fa-edit"></span></button>
-            <button class="btn btn-light ps-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><span class="fas fa-trash-alt"></span></button>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">30/03/2018</td>
-      </tr>
-      <tr class="hover-actions-trigger">
-        <td class="align-middle text-nowrap">
-          <div class="d-flex align-items-center">
-            <div class="avatar avatar-xl">
-              <img class="rounded-circle" src="../../assets/img/team/13.jpg" alt="" />
-            </div>
-            <div class="ms-2">Emma Watson</div>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">emma@example.com</td>
-        <td class="w-auto">
-          <div class="btn-group btn-group hover-actions end-0 me-4">
-            <button class="btn btn-light pe-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><span class="fas fa-edit"></span></button>
-            <button class="btn btn-light ps-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><span class="fas fa-trash-alt"></span></button>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">11/07/2017</td>
-      </tr>
-      <tr class="hover-actions-trigger">
-        <td class="align-middle text-nowrap">
-          <div class="d-flex align-items-center">
-            <div class="avatar avatar-xl">
-              <div class="avatar-name rounded-circle"><span>RA</span></div>
-            </div>
-            <div class="ms-2">Rowen Atkinson</div>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">rown@example.com</td>
-        <td class="w-auto">
-          <div class="btn-group btn-group hover-actions end-0 me-4">
-            <button class="btn btn-light pe-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><span class="fas fa-edit"></span></button>
-            <button class="btn btn-light ps-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><span class="fas fa-trash-alt"></span></button>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">05/04/2016</td>
-      </tr>
-      <tr class="hover-actions-trigger">
-        <td class="align-middle text-nowrap">
-          <div class="d-flex align-items-center">
-            <div class="avatar avatar-xl">
-              <img class="rounded-circle" src="../../assets/img/team/2.jpg" alt="" />
-            </div>
-            <div class="ms-2">Antony Hopkins</div>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">antony@example.com</td>
-        <td class="w-auto">
-          <div class="btn-group btn-group hover-actions end-0 me-4">
-            <button class="btn btn-light pe-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><span class="fas fa-edit"></span></button>
-            <button class="btn btn-light ps-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><span class="fas fa-trash-alt"></span></button>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">05/04/2018</td>
-      </tr>
-      <tr class="hover-actions-trigger">
-        <td class="align-middle text-nowrap">
-          <div class="d-flex align-items-center">
-            <div class="avatar avatar-xl">
-              <img class="rounded-circle" src="../../assets/img/team/3.jpg" alt="" />
-            </div>
-            <div class="ms-2">Jennifer Schramm</div>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">jennifer@example.com</td>
-        <td class="w-auto">
-          <div class="btn-group btn-group hover-actions end-0 me-4">
-            <button class="btn btn-light pe-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><span class="fas fa-edit"></span></button>
-            <button class="btn btn-light ps-2" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><span class="fas fa-trash-alt"></span></button>
-          </div>
-        </td>
-        <td class="align-middle text-nowrap">17/03/2016</td>
-      </tr>
-    </tbody>
-  </table>
+<div id="tableExample" data-list='{"valueNames":["name","email","age"],"page":5,"pagination":true}'>
+  <div class="table-responsive scrollbar">
+    <table class="table table-bordered table-striped fs--1 mb-0">
+      <thead class="bg-200 text-900">
+        <tr>
+          <th class="sort" data-sort="name">Name</th>
+          <th class="sort" data-sort="email">Email</th>
+          <th class="sort" data-sort="age">Age</th>
+        </tr>
+      </thead>
+      <tbody class="list">
+        <tr>
+          <td class="name">Anna</td>
+          <td class="email">anna@example.com</td>
+          <td class="age">18</td>
+        </tr>
+        <tr>
+          <td class="name">Homer</td>
+          <td class="email">homer@example.com</td>
+          <td class="age">35</td>
+        </tr>
+        <tr>
+          <td class="name">Oscar</td>
+          <td class="email">oscar@example.com</td>
+          <td class="age">52</td>
+        </tr>
+        <tr>
+          <td class="name">Emily</td>
+          <td class="email">emily@example.com</td>
+          <td class="age">30</td>
+        </tr>
+        <tr>
+          <td class="name">Jara</td>
+          <td class="email">jara@example.com</td>
+          <td class="age">25</td>
+        </tr>
+        <tr>
+          <td class="name">Clark</td>
+          <td class="email">clark@example.com</td>
+          <td class="age">39</td>
+        </tr>
+        <tr>
+          <td class="name">Jennifer</td>
+          <td class="email">jennifer@example.com</td>
+          <td class="age">52</td>
+        </tr>
+        <tr>
+          <td class="name">Tony</td>
+          <td class="email">tony@example.com</td>
+          <td class="age">30</td>
+        </tr>
+        <tr>
+          <td class="name">Tom</td>
+          <td class="email">tom@example.com</td>
+          <td class="age">25</td>
+        </tr>
+        <tr>
+          <td class="name">Michael</td>
+          <td class="email">michael@example.com</td>
+          <td class="age">39</td>
+        </tr>
+        <tr>
+          <td class="name">Antony</td>
+          <td class="email">antony@example.com</td>
+          <td class="age">39</td>
+        </tr>
+        <tr>
+          <td class="name">Raymond</td>
+          <td class="email">raymond@example.com</td>
+          <td class="age">52</td>
+        </tr>
+        <tr>
+          <td class="name">Marie</td>
+          <td class="email">marie@example.com</td>
+          <td class="age">30</td>
+        </tr>
+        <tr>
+          <td class="name">Cohen</td>
+          <td class="email">cohen@example.com</td>
+          <td class="age">25</td>
+        </tr>
+        <tr>
+          <td class="name">Rowen</td>
+          <td class="email">rowen@example.com</td>
+          <td class="age">39</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="row align-items-center mt-3">
+    <div class="pagination d-none"></div>
+    <div class="col">
+      <p class="mb-0 fs--1">
+        <span class="d-none d-sm-inline-block" data-list-info="data-list-info"></span>
+        <span class="d-none d-sm-inline-block"> &mdash; </span>
+        <a class="fw-semi-bold" href="#!" data-list-view="*">View all<span class="fas fa-angle-right ms-1" data-fa-transform="down-1"></span></a><a class="fw-semi-bold d-none" href="#!" data-list-view="less">View Less<span class="fas fa-angle-right ms-1" data-fa-transform="down-1"></span></a>
+      </p>
+    </div>
+    <div class="col-auto d-flex">
+      <button class="btn btn-sm btn-primary" type="button" data-list-pagination="prev"><span>Previous</span></button>
+      <button class="btn btn-sm btn-primary px-4 ms-2" type="button" data-list-pagination="next"><span>Next</span></button>
+    </div>
+  </div>
 </div>
