echart TECHNICAL TICKER INFO

--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -254,8 +254,8 @@ Stock Score | Stock Info
                     </div>
                 </div>
                 <div class="tab-pane fade" id="tab-technicals" role="tabpanel" aria-labelledby="technicals-tab">
-                    <div class="main-card mb-3 card">
-                        <div class="card-body tab-technicals-card echart-area">
+                    <div class="main-card mb-3 card tab-technicals-card echart-area">
+<!--                        <div class="card-body tab-technicals-card echart-area">-->
                             <div class="echart-header d-md-inline-flex m-3">
                                 <div>
                                     Zoom
@@ -278,8 +278,8 @@ Stock Score | Stock Info
                                 </div>
                                 <div class="col text-center fw-bold">Technical indicators (period:10)</div>
                             </div>
-                            <div class="echart-icker-info-technical" style="min-height: 300px;" data-echart-responsive="true"></div>
-                        </div>
+                            <div class="echart-icker-info-technical" style="min-height: 500px;" data-echart-responsive="true"></div>
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
