trader station - filtered candidates - done

--- a/app/templates/userview/trader_station.html
+++ b/app/templates/userview/trader_station.html
@@ -70,7 +70,9 @@ Stock Score | Trader Station
 <div class="row">
     <div class="col">
         <div class="card mb-1">
-            Current positions
+            <div class="favorites-table">
+                {% include 'layouts/loader.html' %}
+            </div>
         </div>
     </div>
 </div>
