--- a/app/templates/partial/user_candidates.html
+++ b/app/templates/partial/user_candidates.html
@@ -1,6 +1,6 @@
-                <div class="card-header">Tracked Candidates <span class="text-primary pr-2 pl-2"> {{ candidates|length }} </span>  Priority order : Algotrader Rank >
-                    Underprice > Momentum>Beta
-                </div>
+<div class="card-header">Tracked Stocks <span class="text-primary pr-2 pl-2"> {{ candidates|length }} </span>  Priority order : Score >
+    Underprice > Momentum > Beta
+</div>
 <div id="tableExample" data-list='{"valueNames":["ticker","price","age"],"page":5,"pagination":true}'>
   <div class="table-responsive scrollbar">
     <table id="filtered_candidates_table" class="table table-hover table-striped fs--1 mb-0">
