--- a/app/templates/partial/user_positions.html
+++ b/app/templates/partial/user_positions.html
@@ -1,1 +1,172 @@
-Positions Performance
+<div class="row">
+    <div class="col-sm-6 col-lg-4 mb-4">
+    <div class="card text-white bg-primary">
+                {%if margin_used%}
+                <div class="card-body">
+                      <div class="row">
+                          <div class="col">
+                                    <div >SMA</div>
+                                    <div >Available for trading</div>
+                          </div>
+                          <div class="col-auto ps-0">
+                              $ {{ report.remaining_sma_with_safety |round |int }}
+                          </div>
+                      </div>
+                  </div>
+                {%else%}
+                <div class="card-body">
+                      <div class="row">
+                          <div class="col">
+                                    <div >Excess Liquidity</div>
+                                    <div >Available for trading</div>
+                          </div>
+                          <div class="col-auto ps-0">
+                              $ {{ report.excess_liquidity |round |int}}
+                          </div>
+                      </div>
+                </div>
+                {%endif%}
+    </div>
+  </div>
+  <div class="col-sm-6 col-lg-4 mb-4">
+    <div class="card text-white {{ pnl_bg_box_color }}">
+      <div class="card-body">
+          <div class="row">
+              <div class="col">
+                        <div >PNL</div>
+                        <div >Daily PnL for all positions</div>
+              </div>
+              <div class="col-auto ps-0">
+                  <span class="val_pnl">$ {{ report.dailyPnl|round |int }}</span>
+                  <span class="val_pnl" style="    font-size: small;">({{ report.pnl_percent }}%)</span>
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-lg-4 mb-4">
+    <div class="card text-white bg-info">
+      <div class="card-body">
+          <div class="row">
+              <div class="col">
+                        <div >NET</div>
+                        <div >NET liquidation value</div>
+              </div>
+              <div class="col-auto ps-0">
+                <span>$ {{ report.net_liquidation | round |int }}</span>
+
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+    <div class="divider mt-0" style="margin-bottom: 30px;"></div>
+    <div class="row">
+        {% for key, value in open_positions.items() %}
+        {% if value['stocks']!=0 %}
+        <div class="col-lg-6 col-xl-4">
+            <div class="card mb-3 widget-content">
+                <div class="widget-content-outer">
+                    <div class="widget-content-wrapper">
+                        <div class="widget-content-left">
+                            <div class="widget-heading">
+                                <a href="/candidates/info/{{ key }}">
+                                    {{ key}}
+                                </a>
+
+                            </div>
+                            <div class="widget-subheading">Today change:
+                                {%if value['DailyPnL']>0%}
+                                <span style="color:#3AC47D;font-weight:bold">${{value['DailyPnL']|round(1) }}</span>
+                                {%else%}
+                                <span style="color:#D92550;font-weight:bold">${{value['DailyPnL']|round(1) }}</span>
+                                {%endif%}
+                            </div>
+                        </div>
+                        <div class="widget-content-right">
+                            <div class="widget-numbers {{value['profit_class']}}">{{value['profit_in_percents']|round(1)
+                                }}%
+                            </div>
+                        </div>
+                    </div>
+                    <div class="widget-progress-wrapper">
+                        <div class="progress-bar-xs progress">
+                            <div class="progress-bar {{value['profit_progress_colour']}}" role="progressbar"
+                                 aria-valuenow="20" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: {{value['profit_progress_percent']}}%;"></div>
+                        </div>
+                        <div class="progress-sub-label">
+                            <div class="sub-label-left"> {{value['stocks']}} x {{value['last_bid']|round(1)}}</div>
+                            <div class="sub-label-right">{{value['days_open']+1}} Days</div>
+                            <div class="sub-label-right">{{value['Value']|round(1)}}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+    </div>
+    <div class="divider mt-0" style="margin-bottom: 30px;"></div>
+    <div class="row">
+        <div class="col-md-12">
+            All existing positions value : {{report.all_positions_value|round(1)}} USD
+        </div>
+    </div>
+    {% if open_orders|length != 0 %}
+    <div class="divider mt-0" style="margin-bottom: 30px;"></div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="main-card mb-3 card">
+                <div class="card-header">Open orders
+                </div>
+                <div class="table-responsive">
+                    <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th class="text-center">Action</th>
+                            <th>Ticker</th>
+                            <th class="text-center">Type</th>
+                            <th class="text-center">Adjusted Stop Price</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for key, value in open_orders.items() %}
+                        <tr>
+                            <td class="text-center text-muted">{{value['Action']}}</td>
+                            <td>
+                                <div class="widget-content p-0">
+                                    <div class="widget-content-wrapper">
+                                        <div class="widget-content-left mr-3">
+                                            <div class="widget-content-left">
+                                                <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg"
+                                                     alt="">
+                                            </div>
+                                        </div>
+                                        <div class="widget-content-left flex2">
+                                            <div class="widget-heading">{{key}}</div>
+                                            <div class="widget-subheading opacity-7"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="text-center">{{value['Type']}}</td>
+                            <td class="text-center">{{value['adjustedStopPrice']}}</td>
+                            <td class="text-center">
+                                {% if value['Type']=='TRAIL' %}
+                                <div class="badge badge-warning">Profit</div>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
